[gd_scene load_steps=3 format=3 uid="uid://bhwn5w0b5pfsb"]

[ext_resource type="Script" path="res://scenes/dialogs/column_dialog/column_dialog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dj5xf1s363cgn" path="res://assets/themes/white/column_tear.png" id="2"]

[node name="ColumnDialog" type="PanelContainer"]
offset_right = 152.0
offset_bottom = 230.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 13

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../RemoveButton")
focus_neighbor_bottom = NodePath("../PlayColumnButton")
disabled = true
text = "BTN_PLAY"

[node name="PlayColumnButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../ClearButton")
disabled = true
text = "BTN_PLAY_COLUMN"

[node name="ClearButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayColumnButton")
focus_neighbor_bottom = NodePath("../RemoveButton")
disabled = true
text = "BTN_CLEAR"

[node name="RemoveButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../ClearButton")
focus_neighbor_bottom = NodePath("../PlayButton")
disabled = true
text = "BTN_REMOVE"

[node name="Tear" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(25, -0.345501)
texture = ExtResource("2")

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/PlayColumnButton" to="." method="_on_play_column_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/RemoveButton" to="." method="_on_remove_button_pressed"]
